fix: make 'src' prop optional and ensure proper rendering of asset and actions style(card): add justify-content center to card styles for better alignment

--- a/src/components/actions/card/card.scss
+++ b/src/components/actions/card/card.scss
@@ -15,6 +15,7 @@
   padding: var(--card-padding-top) var(--card-padding-right)
     var(--card-padding-bottom) var(--card-padding-left);
   width: var(--card-width);
+  justify-content: center;
 
   &--fill {
     width: 100%;
